Optimize repeated shader reload processing